--- a/jobkarleapp/static/static_css/media-quary.css
+++ b/jobkarleapp/static/static_css/media-quary.css
@@ -1,51 +1,8 @@
 
-@media (max-width: 575px) { 
-    a{
-        font-size: 25px;
-    }
-    .search-box-input{
-        position: relative;
-        bottom: 150px;
-    }
-    .search-box-input .row{
-     padding: 0px;
-     display: flex;
-    }
-    .card-profile img{
-        width: 100px;
-        height: 100px;
-    }
-    .card-profile{
-        position: absolute;
-        left:5px;
-
-        width: 250px;
-        height: 500px
-    }
-    .search-box input{
-    display: none;
-    }
-    .xs-search-box input{
-    display:block;
-    }
-    .card-profile div{
-        display: none;
-    }
-    .Resume-Edite div{
-        display: none;
-    }
-    .card-title{
-        font-size: 18px;
-    }
-    p{
-        font-size: 18px;
-    }
-    .apply-button{
-        position: absolute;
-        right: 10px;
-    }
-    .cdesc{
-        font-size: 45px;
+@media (min-width: 500px) { 
+    .base11{
+        position:fixed;
+        top:0px;
     }
 }
 
@@ -81,9 +38,6 @@
     .card-profile div{
         display: none;
     }
-    .Resume-Edite div{
-        display: none;
-    }
     .card-title{
         font-size: 18px;
     }
@@ -110,7 +64,7 @@
     }
     .search-box-input .row{
      padding: 0px;
-     display: flex;
+     display:none;
     }
     .card-profile img{
         width: 100px;
@@ -119,9 +73,11 @@
     .card-profile{
         position: absolute;
         left:5px;
-
         width: 250px;
         height: 500px
+    }
+    .search-box-input{
+        border-radius: 15px;
     }
     .search-box input{
     display: none;
@@ -130,9 +86,6 @@
     display:block;
     }
     .card-profile div{
-        display: none;
-    }
-    .Resume-Edite div{
         display: none;
     }
     .card-title{
@@ -175,12 +128,6 @@
     .card-profile {
         display: none;
     }
-
-   .search-box-input input{
-    text-decoration: none;
-    border:none;
-    padding: 10px;
-}
 .small-profile{
     display: block;
 }
