--- a/jobkarleapp/templates/companybase.html
+++ b/jobkarleapp/templates/companybase.html
@@ -23,7 +23,7 @@
       <img src="{% static 'logo1.png' %}" width="50" alt="My image"> <strong class="navbar-brand "> SV colleges</strong>
            
             <button class="navbar-toggler" data-toggle="collapse" data-target="#uiNavbar">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon blue"></span>
             </button>
             <div class="collapse navbar-collapse" id="uiNavbar">
                 <ul class="navbar-nav m-auto" style="float: right">
