--- a/jobkarleapp/templates/companys-img.html
+++ b/jobkarleapp/templates/companys-img.html
@@ -7,7 +7,7 @@
 
 </style>
 
-<div class="logo-imgs">
+<div class="logo-imgs container">
      <h3 class="font-weight-bold text-center dark-grey-text pb-2 m-auto">Our Partners</h3>
     <div class="row">
             <div class="col-xs-6 m-auto">
