--- a/jobkarleapp/templates/notification_view.html
+++ b/jobkarleapp/templates/notification_view.html
@@ -1,4 +1,17 @@
 {% load static %}
+<style> 
+  div.scroll { 
+    width: 490px; 
+    height: 720px; 
+    overflow-x: hidden; 
+    overflow-x: auto; 
+    text-align:justify; 
+  } 
+  .main-head{
+    background-color:#212121;
+    color:white;
+  }
+</style> 
 <style>
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);}
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
@@ -278,71 +291,70 @@ height: 100%;
             </ul>
         </nav>
         <section>
-          <div class="col-sm-10 m-3"style="position: relative; left:253px;">
-            <div class="row">
-              <div class="col-sm-11"> 
-                <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: darkgrey;">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="#"><i class="fa fa-caret-square-o-down fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-tasks fa-2x"></i></a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="contact.html" class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="far fa-bell fa-2x animated swing"></i>
-                          {% if notification_unread %}
-                          <div class="badge" style="position: relative; bottom:15px; right:20px; background-color:red;">
-                            <div class="message-count">{{notification_count}}</div>
-                          </div>
-                          {% endif %}</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" href="#"><i class="fa fa-arrow-right fa-2x" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" href="#"><i class="fa fa-tag fa-2x" aria-hidden="true"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </nav>
+          <div class="m-2">
+            <div class="row m-auto">
+              <div> 
+               
             </div>
-              <div class="col-sm-1">
-                <i class="fa fa-print fa-2x float-right" style="padding-top:20px;" aria-hidden="true"></i>
-              </div>
+              
             </div>
           </div>
           </section>
           <section>
-            <div class="row">
-              <div class="card col-sm-6" style="height:780px; position: relative;left:300px;">
+            <nav class=" col-sm-8 navbar navbar-expand-lg navbar-dark m-auto " style="background-color: darkgrey;">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#"><i class="fa fa-caret-square-o-down fa-2x" aria-hidden="true"></i><span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-tasks fa-2x"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="contact.html" class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="far fa-bell fa-2x animated swing"></i>
+                      {% if notification_unread %}
+                      <div class="badge" style="position: relative; bottom:15px; right:20px; background-color:red;">
+                        <div class="message-count">{{notification_count}}</div>
+                      </div>
+                      {% endif %}</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#"><i class="fa fa-arrow-right fa-2x" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#"><i class="fa fa-tag fa-2x" aria-hidden="true"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            {% if oobj %}
+            <div class="row m-auto" style="width: max-content;">
+              <div class="card col-sm-10 m-auto">
                   <div class=" card m-3" style="background-color: aliceblue;">
                     <div class="col-sm-11"style="">
                       <div class="row m-auto">
                         <div class="col-sm-10 p-2">
-                          <div class="" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
-                            <h5><strong>Notification Sender : {{obj.Name}}</strong></h5>
-                            <h5><strong>Email : {{company_user.email}}</strong></h5>
+                          <div>
+                            <h5><strong style="font-size: 13;">Notification Sender : {{obj.Name}}</strong></h5>
+                            <h5><strong style="font-size: 13;">Email : {{company_user.email}}</strong></h5>
           
                           </div>
                         </div>
-                        <div class="col-sm-2 p-2">
-                          <div class="card p-1"><img class="m-auto" src="{{Img.Profile.url}}" width="113" height="113"></div>
+                        <div class="col-sm-2">
+                          <div class="card m-auto"><img class="m-auto" src="{{Img.Profile.url}}" width="50" height="50"></div>
                         </div>
                       </div>
                     </div>
                 </div>
                 <div class=" mt-3" style="margin-left: 20px;">
-                  <div class="row"
                       <div class="col-sm-8"></div>
                       <div class="col-sm-4" style="position: relative; right:50px;"> 
                         <div class="letter-image">
@@ -450,83 +462,68 @@ height: 100%;
                      
                     </div>
                    </div>
-                  <h4 style="font-family: Verdana, Geneva, Tahoma, sans-serif; color:black;"><stong>{{obj.Subject}}</stong></h4>
-                  {{obj.Message | safe}}
+                  <h4 style=" font-size:12; color:black;"><stong>{{obj.Subject}}</stong></h4>
+                  <div style="font-size: 12;">
+                    {{obj.Message | safe}}
                   {{media}}
+                  </div>
+                  
                  </div>
               </div>
-              <div class="col-sm-3" style="height:780px; position: relative;left:300px;">
-                <div class="card pb-2" style="position: relative; right:5px;">
-                  <!DOCTYPE html> 
-<html> 
-	<head> 
-		<style> 
-			div.scroll { 
-				width: 490px; 
-				height: 720px; 
-				overflow-x: hidden; 
-				overflow-x: auto; 
-				text-align:justify; 
-      } 
-      .main-head{
-        background-color:#212121;
-        color:white;
-      }
-		</style> 
-	</head> 
-	<body> 
-		<center> 
-	<div class="main-head">
-    <h5 class="p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"><strong>Notifications</strong> </h5>
-  </div>
-		<div class="scroll "> {% for i in notifications %}  
-      {% if 'Unread' == i.Status %}
-      <div class=" card  m-1 p-2" style="background-color: rgb(228, 187, 208); width:450px; position:relative; left:10px;">
-        <a href="{% url 'jobkarleapp:notification_read' i.id variable2.id %}">
-          <div class="row">
-            <div class="col-sm-3">
-              <img class="p-1" src="{{i.Profile.url}}" style="border:1px solid black; background-color:rgb(198, 207, 209);" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">
             </div>
-            <div class="col-sm-9">
-              <strong class="" style="color:rgb(85, 83, 83);">{{i.Name}}</strong>
-              <div style="color: #999;">
-                {{i.Subject}}
-               </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      
-      {% else%}
-      
-       <div class=" card  m-1 p-2" style="background-color: rgb(240, 230, 235); width:450px; position:relative; left:10px;">
-        <a href="{% url 'jobkarleapp:notification_read' i.id variable2.id %}" >
-          <div class="row">
-            <div class="col-sm-3">
-              <img class="p-1" src="{{i.Profile.url}}" style="border:1px solid black;" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">
-            </div>
-            <div class="col-sm-9">
-              <strong class="" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(85, 83, 83);"">{{i.Name}}</strong>
-              <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color:rgb(175, 168, 168);">
-                {{i.Subject}}
-               </div>
-
-            </div>
-          </div>
-        </a>
-      </div>
-     
-      {% endif %}
-      {% endfor %}
-		</div> 
-		</center> 
-	</body> 
-</html>					 
-
-                </div>
-              </div>
+            {% else %}
+            <div class="m-auto" style="width: max-content;">
+              <table class="m-auto">
+                <thead>
+                  <th>Notifications</th>
+                </thead>
+                {% for i in notifications %}  
+                {% if 'Unread' == i.Status %}
+                <tbody style="border:1.5px solid rgb(216, 212, 212);">
+                  <td style="border:1.5px solid rgb(216, 212, 212);">
+                    <div class="scroll">
+                      <div class="card  m-1 p-2" style="background-color: rgb(228, 187, 208); width:800px;">
+                        <a href="{% url 'jobkarleapp:notification_read' i.id variable2.id %}">
+                          <div class="row" style="width: max-content;">
+                            <div class="col-sm-3">
+                              <img class="p-1" src="{{i.Profile.url}}" style="border:1px solid black; background-color:rgb(198, 207, 209);" width="30" height="30" class="rounded-circle img-responsive" alt="no profile">
+                            </div>
+                            <div class="" style="width: max-content;">
+                              <p class="" style="color:rgb(85, 83, 83); font-size:12;">{{i.Name}}</p>
+                              <p style="color: #999; font-size:12;">
+                                {{i.Subject}}
+                               </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      {% else%}
+                      
+                       <div class=" card  m-1 p-2" style="background-color: rgb(240, 230, 235); width:800px; position:relative; left:10px;">
+                        <a href="{% url 'jobkarleapp:notification_read' i.id variable2.id %}" >
+                          <div class="row">
+                            <div class="col-sm-3">
+                              <img class="p-1 m-auto" src="{{i.Profile.url}}" style="border:1px solid black;" width="30" height="30" class="rounded-circle img-responsive" alt="no profile">
+                            </div>
+                            <div class="col-sm-9" style="width: max-content;">
+                              <strong class="" style="font-size:12;" style="width: max-content;">{{i.Name}}</strong>
+                              <p style="font-size:12;" style="width: max-content;">
+                                {{i.Subject}}
+                              </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </td>
+                </tbody>
+            {% endif %}
+            {% endfor %}
+              </table>
             </div>
             
+            
+            {% endif %}
           </section>
 <!-- Button trigger modal -->
 
